--- a/subscriber_management/templates/subscriber_join.html
+++ b/subscriber_management/templates/subscriber_join.html
@@ -1,39 +1,171 @@
-{% extends "master.html" %}
+{% extends "newsletter_homepage_master.html" %}
 {% load i18n %}
 
-{% block header %}
+
+{% block title %}
+	{{list_item.title}} Newsletter 
 {% endblock %}
 
+
+{% block styles %}
+  <style>
+		.avatar {
+			border-radius: 5px;
+		}
+    h1 {
+      font-size: 3rem;
+      font-weight: 700;
+    }
+    p {
+      white-space: pre-wrap;
+      max-width: 35em;
+    }
+		fieldset {
+			margin-top: 2rem;
+		}
+    form {
+      position: relative;
+    }
+    form input[type="email"] {
+      position: absolute;
+      top: 0;
+      border: 2px solid #fada00;
+      height: 42px;
+      border-right: 0;
+      margin-right: -3px;
+      width: 250px;
+      padding: 0.5rem;
+      padding-bottom: 0;
+      background: #fcfcfa;
+      border-top-left-radius: 3px;
+      border-bottom-left-radius: 3px;
+      background: #fff;
+      line-height: 0;
+    }
+    form input[type="email"]:focus,
+    form input[type="email"]:active {
+      outline: none;
+		}
+		form input[type="email"]:valid + label {
+			color: #4CAF50;
+		}
+		label {
+			position: absolute;
+			top: 0.25rem;
+			left: 0.5rem;
+			z-index: 10;
+			color: #96999b;
+			font-size: 9px;
+			text-transform: uppercase;
+			font-weight: 600;
+			letter-spacing: 0.3px;
+		}
+		legend {
+      margin-bottom: 0.5rem;
+			font-size: 14px;
+      font-weight: 500;
+      border-bottom: none;
+		}
+		form button {
+      border: none;
+			font-family: inherit;
+			font-style: inherit;
+			min-height: 1.5em;
+			box-shadow: none;
+			position: absolute;
+			top: 0;
+			left: 240px;
+			height: 42px;
+			width: 110px;
+			padding: 8px 18px 10px;
+			border-radius: 3px;
+			background-color: #ffde00;
+			font-variant: small-caps;
+			text-transform: lowercase;
+			font-weight: 400;
+			line-height: 1;
+			font-size: 15px;
+			color: #313233;
+			cursor: pointer;
+			border-top-left-radius: 0;
+			border-bottom-left-radius: 0;
+			border-left: 0;
+		}
+		form button:hover {
+			background: #fada00;
+			outline: none;
+		}
+		form button:focus {
+			outline: 2px solid #FFF;
+			outline-offset: -4px;
+		}
+		form button:active {
+			box-shadow: inset -1px 2px 1px #d9bd00;
+			outline: none;
+		}
+	</style>
+{% endblock %}
+
+
 {% block content %}
-<div class='container'>
-  <form method="POST">
-    <legend>Subcribe to {{list_item.title}}</legend>
-    {% if list_item.description %}
-      <p class="">{{list_item.description}}</p>
-    {% endif %}
-    {% if list_item.image %}
-      <img src="{{list_item.image}}"/>
-    {% endif %}
-    {% for input in form %}
-      {% if input.name != 'timezone' %}
-        <div class="form-group">
-          <label for="{{input.name}}">{{input.label}}</label>
-          {{input}}
-          {% for error in input.errors %}
-            <br>
-            <div class="alert alert-danger" role="alert">{{error}}</div>
-          {% endfor %}
-        </div>
-      {% else %}
-      {% endif %}
-    {% endfor %}
-    {% if duplicate_error %}
-      <div class="alert alert-danger" role="alert">{{duplicate_error}}</div>
-    {% endif %}
-    <div style="position: absolute; left: -5000px;">
-          <input type="text" name="{{list_item.signup_token}}" tabindex="-1" value="">
-    </div>
-    <button class="btn btn-primary">{% trans 'Subscribe' %}</button>
-  </form>
+<div class='row'>
+
+	<div class='col-lg-5 col-md-5 hidden-sm hidden-xs'>
+		<div style='position: fixed; left: 0; width: 40%; top: 0; bottom: 0; background: #F3F3F3;'>
+				<div class='preview' style='box-shadow: 0 1px 2px #9a9a9a;position: relative; min-height: 600px; height:auto; background: #fff; overflow: hidden; min-width: 350px; width: 350px; float: right; margin: 100px 3rem 1rem 1rem;'>
+					<div style='margin-top: -25px; position: fixed; font-weight: 500; font-size: 15px;'>Last issue:</div>
+					<iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.90); transform-origin: 0 0; height: 112%; width: 112%;' src='{% url "campaign-email-preview" last_campaign.id %}'>
+					</iframe>
+					<div class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></div>
+				</div>
+		</div>
+	</div>
+	<div class='visible-sm visible-xs'>
+		<div style='position:fixed;top: 0;border: 2px solid #ffde00; right:0; left: 0'></div>
+	</div>
+
+	<div class='col-lg-5 col-md-7 col-sm-12 col-xs-12'>
+    <br />
+		{% if list_item.image %}
+			<img class='avatar' src="/{{list_item.image.url}}" height=100 />
+		{% endif %}
+		<h1>{{list_item.title}}</h1>
+		<p style='white-space: pre-wrap;'>{{list_item.description}}</p>
+	  <fieldset>
+			<legend>
+				{% if list_item.count_validated_subscribers == 0 %}
+					Join other subscribers:
+				{% else %}
+					Join {{list_item.count_validated_subscribers}} subscribers:
+				{% endif %}
+			</legend>
+			<form method="post">
+					<input id="{{form.email.auto_id}}" type="email" placeholder=""
+								 x-autocompletetype="email" name="EMAIL" autofocus
+								 tabindex="1"
+								 spellcheck="false"
+								 required
+								 pattern="[\w+-_]+@[\w\-.]+\.[\w|.]{2,}" />
+					<label for='{{form.email.auto_id}}'>Email:</label>
+					{% for error in input.errors %}
+							<div class="alert alert-danger" role="alert">{{error}}</div>
+					{% endfor %}
+				{% if duplicate_error %}
+					<div class="alert alert-danger" role="alert">{{duplicate_error}}</div>
+				{% endif %}
+				<div style="position: absolute; left: -5000px;">
+							<input type="text" name="{{list_item.signup_token}}"
+										 tabindex="-1" value="" />
+				</div>
+				<button type='submit' tabindex=2>{% trans 'Subscribe' %}</button>
+			</form>
+		</fieldset>
+		<footer style='position: fixed; bottom: .5rem; left: 40%; margin-left: 1rem;'>
+			<small>
+				A newsletter powered by <a href='https://minimail.im' style='color: currentColor;text-decoration:underline'>Minimail.</a>
+			</small>
+    </footer>
+	</div>
+
 </div>
 {% endblock %}
