--- a/subscriber_management/templates/subscriber_join_success.html
+++ b/subscriber_management/templates/subscriber_join_success.html
@@ -1,17 +1,35 @@
-{% extends "master.html" %}
+{% extends "newsletter_homepage_master.html" %}
 {% load i18n %}
 
-{% block header %}
+
+{% block title %}
+	{{list_item.title}} Newsletter 
 {% endblock %}
 
+
 {% block content %}
-<div class='container'>
-<p>
-  {%if list_item.success_template %}
-    {{list_item.success_template}}
-  {% else %}
-  {% trans 'You have successfully subscribed to' %} {{list_item.title}}
-  {% endif %}
-</p>
-</div>
+
+	<div class='container'>
+		<div class='row'>
+			<div class='col-lg-4 col-md-6 col-xs-12 col-sm-12 col-lg-offset-4 col-md-offset-3'>
+				<br />
+				<div class='text-center'>
+					{% if list_item.image %}
+						<img class='avatar' src="/{{list_item.image.url}}" height=100 />
+					{% endif %}
+				</div>
+				<br />
+				<br />
+				<p class='alert alert-info text-center'>
+					{%if list_item.success_template %}
+						{{list_item.success_template}}
+					{% else %}
+					{% trans 'You have successfully subscribed to' %}
+						<strong>{{list_item.title}}</strong>
+					{% endif %}
+				</p>
+			</div>
+		</div>
+	</div>
+
 {% endblock %}
