--- a/subscriber_management/templates/newsletter_homepage_master.html
+++ b/subscriber_management/templates/newsletter_homepage_master.html
@@ -9,7 +9,7 @@
     <title>{% block title %}{% endblock %} &middot; Minimail</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-    <link rel="canonical" href="http://minimail.fullweb.io">
+    <link rel="canonical" href="https://minimail.im">
     {% block styles %}{% endblock %}
 		<style>
 			main {
@@ -27,6 +27,9 @@
 
     </main>
 
+		<footer class='text-center text-muted'>
+			<small>A newsletter powered by <a style='color: currentColor; text-decoration: underline' href='http://minimail.im'>Minimail.</small></small>
+		</footer>
 
     <script src='{% static "js/vendor/jquery-3.1.0.js" %}'></script>
 		<script>
