--- a/subscriber_management/templates/subscriber_join_success.html
+++ b/subscriber_management/templates/subscriber_join_success.html
@@ -11,7 +11,7 @@
 
 	<div class='container'>
 		<div class='row'>
-			<div class='col-lg-4 col-md-6 col-xs-12 col-sm-12 col-lg-offset-4 col-md-offset-3'>
+			<div class='col-lg-6 col-md-6 col-xs-12 col-sm-12 col-lg-offset-3 col-md-offset-3'>
 				<br />
 				<div class='text-center'>
 					{% if list_item.image %}
@@ -20,14 +20,18 @@
 				</div>
 				<br />
 				<br />
-				<p class='alert alert-info text-center'>
-					{%if list_item.success_template %}
-						{{list_item.success_template}}
-					{% else %}
-					{% trans 'You have successfully subscribed to' %}
-						<strong>{{list_item.title}}</strong>
-					{% endif %}
+				<p class='alert alert-success text-center'>
+				{% trans 'You have successfully subscribed to' %}
+					<strong>{{list_item.title}}</strong>!
 				</p>
+				<p class='text-center'>
+					We just sent you a confirmation email.
+					<br/>
+					<br/>
+				</p>
+				{%if list_item.success_template %}
+					<p class='text-center'> {{ list_item.success_template }} </p>
+				{% endif %}
 			</div>
 		</div>
 	</div>
