--- a/subscriber_management/templates/subscriber_validated.html
+++ b/subscriber_management/templates/subscriber_validated.html
@@ -1,13 +1,31 @@
-{% extends "master.html" %}
+{% extends "newsletter_homepage_master.html" %}
 {% load i18n %}
 
-{% block header %}
+
+{% block title %}
+	{{list_item.title}} Newsletter 
 {% endblock %}
 
+
 {% block content %}
-<div class='container'>
-  <p>
-    {% trans 'Your account has successfully been validated to' %} {{list_item.title}}
-  </p>
-</div>
+
+	<div class='container'>
+		<div class='row'>
+			<div class='col-lg-6 col-md-6 col-xs-12 col-sm-12 col-lg-offset-3 col-md-offset-3'>
+				<br />
+				<div class='text-center'>
+					{% if list_item.image %}
+						<img class='avatar' src="/{{list_item.image.url}}" height=100 />
+					{% endif %}
+				</div>
+				<br />
+				<br />
+				<p class='alert alert-success text-center'>
+				{% trans 'Thank you for confirming your subscription to ' %}
+					<strong>{{list_item.title}}</strong>.
+				</p>
+			</div>
+		</div>
+	</div>
+
 {% endblock %}
