Add color syntax to code snippet for sign up forms.

--- a/campaign_management/templates/campaign_list.html
+++ b/campaign_management/templates/campaign_list.html
@@ -124,7 +124,7 @@
 									{% else %}
 										<div style='margin-top: 2rem;' >
 											<a class='btn btn-default btn-sm' href='{% url "campaign-update" campaign.id %}'>
-												Resume email composing &raquo;
+												Resume composing &raquo;
 											</a>
 										</div>
 									{% endif %}
