--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -2,8 +2,9 @@
 
 <style>
 	.navbar-minimail {
+		margin-top: .5rem;
 		background: #FFF;
-		border-bottom: 2px solid #EAEAEA;
+		border-bottom: 0px solid #EAEAEA;
 		border-radius: 0;
 	}
 	.navbar-minimail a.navbar-brand {
