--- a/subscriber_management/templates/list_list.html
+++ b/subscriber_management/templates/list_list.html
@@ -4,48 +4,86 @@
 
 
 {% block title %}
-  Subscribers
+  {% trans 'Subscriber Lists' %}
 {% endblock %}
 
 
 {% block content %}
 
+	<br />
+
   <div class='container'>
+
     <div class='row'>
-      <div class='col-lg-6 col-sm-6'>
+      <div class='col-lg-10 col-lg-offset-1 col-sm-12'>
         <h3>
           {% trans "Subscriber Lists" %}
+					&nbsp;&nbsp;<a class='btn btn-default' href='{% url "subscriber-management-create" %}'>
+						{% trans 'Create a new list' %}
+					</a>
         </h3>
-      </div>
-      <div class='col-lg-6 col-sm-6 text-right'>
-        <br />
-        <a class='btn btn-default' href='{% url "subscriber-management-create" %}'>{% trans 'Create a new list' %}</a>
       </div>
     </div>
 
-    <hr />
-
-    {% for item in  object_list %}
-      <div class="list-group">
-        <a href="{% url 'subscriber-management-list-subscribers' item.uuid %}" class="list-group-item">
-          <h4 class='list-group-item-heading'>
-            {{ item.name }}
-            <small>
-              {{ item.count_validated_subscribers|intcomma }} subscriber{{item.count_validated_subscribers|pluralize}}
-            </small>
-          </h4>
-          <p class="list-group-item-text">
-            <small class='text-muted'>created: {{ item.created }}</small>
-          </p>
-        </a>
+    <div class='row'>
+      <div class='col-lg-10 col-sm-12 col-lg-offset-1'>
+			{% for list in  subscriber_lists %}
+				<div class="row" style='margin-top: 2rem'>
+					<div class='col-lg-4 col-sm-3'>
+            <img height='25' style='    margin-top: 8px; margin-left: -34px;' class='pull-left' src='/{{list.image.url}}'/>
+						<h4>
+							<a href="{% url 'subscriber-management-list-subscribers' list.uuid %}">
+								{{ list.name }}
+							</a>
+						</h4>
+					</div>
+					<div class='col-lg-3 col-sm-3'>
+						<h4 style='font-weight:300'>
+							{{ list.count_validated_subscribers|intcomma }} subscriber{{list.count_validated_subscribers|pluralize}}
+						</h4>
+					</div>
+					<div class='col-lg-2 col-sm-3'>
+						<h4 style='font-weight:300'>
+							53.4% opens
+						</h4>
+					</div>
+					<div class='col-lg-2 col-sm-3'>
+						<h4 style='font-weight:300'>
+							15.2% clicks
+						</h4>
+					</div>
+				</div>
+				<div class="row" style='margin-bottom: 1rem'>
+					<div class='col-lg-10 col-sm-12'>
+						<small class='text-muted'>
+              {{ list.draft_count|default:"No"}} draft{{list.draft_count|pluralize}}
+              /
+              {{ list.sent_count|default:"No"}} sent{{list.sent_count|pluralize}}
+              {% if list.last_email_sent %}
+                &nbsp;&middot;&nbsp;
+                Last email sent
+                <time datetime='{{list.last_email_sent.timestamp}}'
+                      title='{{list.last_email_sent|date:"D d M Y \a\t H:m"}}'>
+                  {{ list.last_email_sent|timesince }}
+                </time>	ago
+              {% endif %}
+              &nbsp;&middot;&nbsp;
+							List created on
+							<time datetime='{{list.create.timestamp}}' title='{{list.created|timesince}} ago'>
+								{{ list.created|date:"D d M Y \a\t H:m" }}
+							</time>
+						</small>
+					</div>
+				</div>
+			{% empty %}
+				<div class='alert alert-warning'>
+					No list created yet.
+					<a href="{% url 'subscriber-management-create' %}">Go create one &raquo;</a>
+				</div>
+			{% endfor %}
       </div>
-    {% empty %}
-      <div class='alert alert-warning'>
-        No list created yet.
-        <a href="{% url 'subscriber-management-create' %}">Go create one &raquo;</a>
-      </div>
-    {% endfor %}
-  </div>
+    </div>
+	</div>
 
   <!-- Modal for delete deletion confirmation -->
   <div id='list-delete-confirmation' class="modal" tabindex="-1" role="dialog">
@@ -72,6 +110,8 @@
         </form>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
+	</div><!-- /.modal-dialog -->
+
 {% endblock %}
 
 
