--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -11,6 +11,9 @@
 		color: currentColor;
 		font-weight: 900;
 		padding-left: 0;
+		font-variant: small-caps;
+		letter-spacing: -1px;
+		text-transform: lowercase;
 	}
 	.navbar-minimail a {
 		color: #333;
@@ -36,12 +39,12 @@
 
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Minimail.</a>
+      <a class="navbar-brand" href="/">minimail.</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     {% if user.is_authenticated %}
-      <a href="/campaigns/new" class="btn btn-default navbar-btn pull-left" style='margin-right: .5rem;'>
+      <a href="/campaigns/new" class="btn btn-default btn-sm navbar-btn pull-left" style='margin-right: .5rem;'>
         {% trans "Compose email" %}
       </a>
       <ul class="nav navbar-nav">
